# BSUIR_labs

./: .gitignore  .swp  CNAME  README.md
1_term/: 1.docx  README.md  Shpora_k_ekzamenu_2.doc  Вопросы к экзамену по ОАиП.docx  Шпора.docx  ШпораОАиП.docx
3_term/: .gitignore
5_term/: .gitignore
6_term/AVP/lab5/: .clang-format  .gitignore  CMakeLists.txt  Image.cu  Image.cuh  Image.h  README.md  cpu.cu  cpu.cuh  main.cu  utilities.cuh
6_term/AVP/lab5/images/: line.ppm  line1.ppm  line3x3.ppm
6_term/AVP/lab5/stb_image/: stb_image.h  stb_image_write.h
7_term/SPOLKS/lab2-server-client/server/: Cargo.toml
7_term/SPOLKS/lab2-server-client/server/src/: main.rs  nets_io.rs  stream_io.rs
7_term/SPOLKS/lab2-server-client/server/uploaded_files/: download.txt
Lab10/: CMakeLists.txt  Ring.h  main.cpp
Lab10_container_class_circle/: CMakeLists.txt  main.cpp
Lab11_namespaces/: CMakeLists.txt  main.cpp
Lab12_STL/: CMakeLists.txt  main.cpp
Lab1_reverse_text/: CMakeLists.txt  main.cpp
Lab2_Assignment_and_reviewer/: CMakeLists.txt  Task.cpp  Task.h  Verifier.cpp  Verifier.h  func.cpp  func.h  main.cpp  menu_function.cpp  menu_function.h
Lab3_int_array_overload/: Array.cpp  Array.h  CMakeLists.txt  main.cpp
Lab4_dynamic_create/: Matrix.cpp  Matrix.h  main.cpp
Lab5_rhombic_inheritance/: CMakeLists.txt  Employee.cpp  Employee.h  Man.cpp  Man.h  Programmer.cpp  Programmer.h  Student.cpp  Student.h  Student_Programmer.cpp  Student_Programmer.h  University_Student.cpp  University_Student.h  getters.cpp  getters.h  main.cpp  menu_functions.cpp  menu_functions.h
(+1524 files in other folders)
