[package]
name = "lab1-tcp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = { version = "0.5.5" }
chrono = { version = "0.4.31"}
dirs = "5.0.1"
# pnet = "0.34.0"
# network-interface = "0.1.6"